--- a/Notebooks/02 - Numerical precision.ipynb
+++ b/Notebooks/02 - Numerical precision.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "## Huge and Tiny\n",
     "\n",
-    "The largest number, and smallest positive (non-zero) number, that can be stored in floating point are sometimes called huge and tiny. These depend on the type of floating point number (single or double). Many (most?) languages have functions to find these values, but note that the \n",
+    "The largest number, and smallest positive (non-zero) number, that can be stored in floating point are sometimes called huge and tiny. These depend on the type of floating point number (single or double). Many (most?) languages have functions to find these values. Check the documentation for your language.\n",
     "\n",
     "In fortran, use the functions ``tiny(x)`` and ``huge(x)`` on a real of the desired type.\n",
     "\n",
@@ -581,6 +581,7 @@
     "print(i)\n",
     "\n",
     "# Add 1, and print the result\n",
+    "# Note the warning about overflow, causing the result to \"roll over\" and become negative\n",
     "print(i+1)"
    ]
   },
@@ -630,13 +631,6 @@
     "\n",
     "type(k)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
