--- a/Notebooks/03 - Random numbers.ipynb
+++ b/Notebooks/03 - Random numbers.ipynb
@@ -219,6 +219,7 @@
     "\n",
     "random_numbers = lehmer(42, 1000000)\n",
     "\n",
+    "# Plot a histogram showing the distribution of random numbers\n",
     "fig = plt.figure(figsize = (12, 5))\n",
     "plt.hist(random_numbers, bins = 1000)\n",
     "plt.xlabel('Random numbers')\n",
@@ -231,7 +232,7 @@
    "source": [
     "## /dev/random\n",
     "\n",
-    "On linux or Mac, there is a file-like object in the file system, at ``/dev/random`` which uses a combination of a PRNG with actual random numbers (collected from voltage or temperature fluctuations measured in the computer hardware) to set and reset the seed."
+    "On linux or Mac, there is a file-like object in the file system, at ``/dev/random`` which uses a combination of a PRNG with actual random numbers (collected from voltage or temperature fluctuations measured in the computer hardware) to set and reset the seed. See https://en.wikipedia.org/wiki//dev/random"
    ]
   },
   {
@@ -1914,13 +1915,6 @@
     "# Change orientation of second plot to reveal planes\n",
     "ax2.azim = 53"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
