--- a/Notebooks/05 - A short introduction to Monte Carlo methods.ipynb
+++ b/Notebooks/05 - A short introduction to Monte Carlo methods.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "# Monte Carlo methods\n",
     "\n",
-    "Monte Carlo methods are a collection of methods that make use of random numbers, usually to try to determine some deterministic (non-random) property. Examples include\n",
+    "Monte Carlo methods are a collection of methods that make use of random numbers, often to try to determine some deterministic (non-random) property. Examples include\n",
     "* Finding the properties (e.g., mean and variance) of some probability distribution\n",
     "* Finding the expectation value of a function of a random variable\n",
     "\n",
@@ -45,7 +45,7 @@
     "\n",
     "where $\\mathcal{N}(0, \\sigma^2)$ is a Gaussian distribution with zero mean and variance $\\sigma^2$, and $\\sigma^2$ is the (usually unknown) variance of the original distribution $p$.\n",
     "\n",
-    "#### The convergence with $1/\\sqrt{N}$ is an important feature of Monte Carlo methods."
+    "#### The convergence with $1/\\sqrt{N}$ is an important and universal feature of Monte Carlo methods."
    ]
   },
   {
@@ -192,13 +192,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,7 +251,7 @@
    "source": [
     "## Markov Chain Monte Carlo\n",
     "\n",
-    "Markov Chain Monte Carlo is an approach for sampling from a probability distribution where it is difficult to draw samples. Typical examples where this is useful many-dimensional distributions, where the most probable values are gathered in a small fraction of the volume of the distribution.\n",
+    "Markov Chain Monte Carlo is an approach for sampling from a probability distribution where it is difficult to draw samples. Typical examples where this is useful includes many-dimensional distributions, where the most probable values are gathered in a small fraction of the volume of the distribution.\n",
     "\n",
     "The idea is that instead of drawing independent samples, we create a series of samples, where each one is a random perturbation of the previous sample. Such a series of random values is called a Markov Chain if it has the property that the next value only depends on the current value, not on any previous values. The trick then is to construct a Markov Chain that has the desired stationary distribution.\n",
     "\n",
@@ -874,13 +867,6 @@
     "plt.xlabel('Sweeps')\n",
     "plt.ylabel('Average spin')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
