--- a/Notebooks/06 - Finite difference approximations.ipynb
+++ b/Notebooks/06 - Finite difference approximations.ipynb
@@ -140,7 +140,13 @@
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.legend(fontsize = 14)\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "\n",
+    "\n",
+    "# Note that the error reaches a minimum, and then starts growing\n",
+    "# when delta x is decreased further. This is due to accumulation\n",
+    "# of round-off error:\n",
+    "# https://en.wikipedia.org/wiki/Round-off_error#Accumulation_of_roundoff_error"
    ]
   },
   {
@@ -420,13 +426,6 @@
     "# Change the number 1 to calculate higher derivatives\n",
     "diff(f, x, 1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
