--- a/Notebooks/17 - Convolutional Neural Networks.ipynb
+++ b/Notebooks/17 - Convolutional Neural Networks.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "# Convolutional neural network\n",
     "\n",
-    "This notebook contains a fairly minimal example of setting up a convolutional neural network for recognizing handwritten digits. It uses the library Keras, which in turn uses TensorFlow as a backend. The dataset is a publicly available set of 60000 images (each image is 28x28 pixels) of handwritten digits, and a set of matching labels which gives the correct digit in each image.\n",
+    "This notebook contains a fairly minimal example of setting up a convolutional neural network for recognizing handwritten digits. It uses the library Keras (https://keras.io/), which in turn uses TensorFlow (https://www.tensorflow.org/) as a backend. The dataset is a publicly available set of 60000 images (each image is 28x28 pixels) of handwritten digits, and a set of matching labels which gives the correct digit in each image.\n",
     "\n",
     "This isn't meant as a comprehensive example of best practice or anything like that, but more as a simple example to show that it is quite easy to get started (if you have an easily available set of input data).\n",
     "\n",
@@ -317,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
