--- a/Notebooks/13 - Stochastic Differential Equations.ipynb
+++ b/Notebooks/13 - Stochastic Differential Equations.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "## Distribution of random walkers\n",
     "\n",
-    "Next, we will look at the distribution when we consider a large number of random walkers. To investigate the distribution, we will use a histogram of positions at different times. It turns out that the distribution is Gaussian, with the probability distribution after $n$ random steps of length $L$ is given by\n",
+    "Next, we will look at the distribution when we consider a large number of random walkers. To investigate the distribution, we will use a histogram of positions at different times. It turns out that the distribution is a binomial distribution, which for a large number of steps has approximately the shape of a Gaussian with the distribution after $n$ random steps of length $L$ is given by\n",
     "\n",
     "$$ p(x, n) = \\frac{1}{\\sigma_n\\sqrt{2\\pi}} \\exp \\left( -\\frac{1}{2} \\frac{x^2}{\\sigma_n^2} \\right), $$\n",
     "\n",
@@ -1581,7 +1581,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1595,7 +1595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
